# twilight

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README  README.md
assets/lucy/: lucy.gltf
assets/teapot/: teapot.gltf
shaders/: aabb.mesh.slang  aabb.task.slang  common.slang  cs_dirty_update.comp.slang  depth_pyramid.comp.slang  drawcmd.comp  drawcmd.comp.slang  draws.glsl  draws.slang  early_cull.comp.slang  late_cull.comp.slang  mesh.frag  mesh.glsl  mesh.mesh  mesh.task  mesh.vert  mesh.vert.slang  meshlet.mesh.slang  meshlet.task.slang  overdraw_acc.frag.slang  overdraw_viz.comp.slang  scene.slang  test.comp  utils.slang  vertex.glsl  wireframe.frag
shaders/slang/: drawcmd.slang  mesh.slang  mesh_frag.slang
src/: CMakeLists.txt  main.cpp  pch.h  twilight.cpp  twilight.h  types.h  utils.cpp  utils.h
src/renderer/: r_camera.cpp  r_camera.h  r_context.cpp  r_context.h  r_resources.cpp  r_resources.h  r_scene.cpp  r_scene.h  r_shaders.cpp  r_shaders.h  r_swapchain.cpp  r_swapchain.h  twilight.cpp  twilight.h
